--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,62 @@
-@import url('./fonts.css');
+.header {
+    position: absolute;
+    width: 100%;
+    height: 93px;
+    left: 0px;
+    top: 0px;
 
-:root {
-    --primary-bg-color: #F3EFE4;
-    --secondary-bg-color: #D6D3C9;
+    background: #F3EFE4;
+}
 
-    --primary-text-color: #000000;
-    --secondary-text-color: #000000;
+body {
+    background: #F3EFE4;
+}
+
+.logo {
+    position: absolute;
+    width: 105px;
+    height: 55px;
+    left: 100px;
+    top: 22px;
+}
+
+.menu {
+    position: absolute;
+    width: 100%;
+    height: 22px;
+    left: 242px;
+    top: 45px;
+}
+
+.botao-menu {
+    position: absolute;
+    width: 53px;
+    height: 22px;
+    left: 0px;
+    top: 0px;
+
+    font-family: 'OpenDyslexic';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 26px;
+    text-transform: uppercase;
+
+    color: #000000;
+}
+
+.footer {
+    position: absolute;
+    width: 100%;
+    height: 317px;
+    left: -1px;
+    top: 2616px;
+}
+
+.footer-logo {
+    position: absolute;
+    width: 246px;
+    height: 129px;
+    left: 139px;
+    top: 42px;
 }
