Feat: página FAQ já com cliques ok

--- a/components/header/header.html
+++ b/components/header/header.html
@@ -1,4 +1,7 @@
-<a class="logo" href="/"><img src="./assets/icons/menu_logo.png"></a>
-<div class="menu">
-    <a class="botao-menu" href="/">Início</a>
+<div class="header">
+    <a class="logo" href="/"><img src="./assets/icons/menu_logo.png"></a>
+    <div class="menu">
+        <a class="botao-menu" href="/" home>Início</a>
+        <a class="botao-menu" href="/faq.html" faq>Perguntas Frequentes</a>
+    </div>
 </div>
