--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    <a class="footer-logo" href="/"><img src="./assets/icons/footer_logo.png"></a>
+    <a class="footer-logo" href="/"></a>
 </div>
