--- a/components/header/header.html
+++ b/components/header/header.html
@@ -1,7 +1,7 @@
 <div class="header">
     <a class="logo" href="/"><img src="./assets/icons/menu_logo.png"></a>
     <div class="menu">
-        <a class="botao-menu" href="/" home>Início</a>
-        <a class="botao-menu" href="/faq.html" faq>Perguntas Frequentes</a>
+        <a class="botao-menu" href="./" home>Início</a>
+        <a class="botao-menu" href="./faq.html" faq>Perguntas Frequentes</a>
     </div>
 </div>
