--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ a:hover {
 .h1-faq {
     width: 87.5%;
     text-align: left;
-    padding: 4rem 0px 3.375rem 15.125rem;
+    padding: 4rem 0px 3.375rem 17vw;
     background-color: var(--bg-secondary-color);
 }
 
@@ -125,7 +125,8 @@ div[class='ask-container'] {
 .answer {
     display: none;
     transform: scale(0);
-    padding-left: 1.625rem;
+    padding-left: 1.125rem;
+    padding-right: 1.125rem;
 
     transition: transform 0.3s;
     text-align: justify;
