--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 .header {
     position: absolute;
-    width: 100%;
     height: 93px;
     left: 0px;
     top: 0px;
@@ -51,6 +50,7 @@ body {
     height: 317px;
     left: -1px;
     top: 2616px;
+    background: #D6D3C9;
 }
 
 .footer-logo {
@@ -59,4 +59,36 @@ body {
     height: 129px;
     left: 139px;
     top: 42px;
+}
+
+.footer-social-media {
+    position: absolute;
+    width: 238px;
+    height: 52px;
+    left: 130px;
+    top: 199px;
+}
+
+.footer-twitter {
+    position: absolute;
+    width: 48px;
+    height: 48px;
+    left: 0px;
+    top: 4px;
+}
+
+.footer-instagram {
+    position: absolute;
+    width: 48px;
+    height: 48px;
+    left: 95px;
+    top: 0px;
+}
+
+.footer-youtube {
+    position: absolute;
+    left: 79.83%;
+    right: 0%;
+    top: 0%;
+    bottom: 7.69%;
 }
