--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,3 +1,38 @@
 <div class="footer">
-    <a class="footer-logo" href="./"></a>
+    <div>
+        <a href="./">
+            <div class="footer-logo"></div>
+        </a>
+        <div class="social-medias">
+            <a href="https://twitter.com/GTRR_Oficial" target="_blank" rel="noopener noreferrer">
+                <img src="https://cdn-icons-png.flaticon.com/512/733/733635.png" alt="Twitter da GTRR">
+            </a>
+
+            <a href="https://www.instagram.com/gtrr_oficial/" target="_blank" rel="noopener noreferrer">
+                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png" alt="Instagram da GTRR">
+            </a>
+
+            <a href="https://www.youtube.com/@guildadostradutores" target="_blank" rel="noopener noreferrer">
+                <img src="https://cdn-icons-png.flaticon.com/512/152/152810.png" alt="YouTube da GTRR">
+            </a>
+        </div>
+    </div>
+
+    <div>
+        <a href="./">Início</a>
+        <a href="./estatuto.html">Estatuto</a>
+        <a href="./manifesto.html">Manifesto</a>
+    </div>
+
+    <div>
+        <a href="./camaradas.html">Cadastro de Camarada</a>
+        <a href="./membros.html">Cadastro de Membros</a>
+        <a href="./faq.html">Perguntas Frequentes</a>
+    </div>
+
+    <div>
+        <a href="./curadoria.html">Forms da Curadoria</a>
+        <a href="./projetos em andamento.html">Projetos em Andamento</a>
+        <a href="./projetos finalizados.html">Projetos Finalizados</a>
+    </div>
 </div>
