Style: aplicação da sugestão do Alvy

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -31,7 +31,7 @@
     </div>
 
     <div>
-        <a href="./curadoria.html">Forms da Curadoria</a>
+        <a href="./curadoria.html">Sugestão de Projeto</a>
         <a href="./projetos em andamento.html">Projetos em Andamento</a>
         <a href="./projetos finalizados.html">Projetos Finalizados</a>
     </div>
