--- a/components/header/header.html
+++ b/components/header/header.html
@@ -28,7 +28,7 @@
             </li>
 
             <li>
-                <a class="botao-menu" href="./curadoria.html" curadoria>Forms da Curadoria</a>
+                <a class="botao-menu" href="./curadoria.html" curadoria>Sugestão de Projeto</a>
             </li>
 
             <li>
