--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     display: flex;
     flex-direction: column;
 
-    font-size: 0.9rem;
+    font-size: 1.1rem;
     line-height: 1.625rem;
     font-weight: 700;
     font-style: normal;
@@ -81,6 +81,17 @@ a:hover {
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+
+.content > p {
+    align-self: flex-start;
+}
+
+.content > ul {
+    align-self: flex-start;
+    left: 0;
+    margin-top: 0;
+    row-gap: 0.8rem;
 }
 
 /* Header */
@@ -266,12 +277,14 @@ article[class='content faq'] > hr {
     transition: transform 0.2s;
 }
 
-.answer > img {
-    width: 40vw;
-    height: 40vw;
+.answer > .img-rice {
     margin-left: 25%;
 }
 /* End FAQ */
+.img-rice {
+    width: 40vw;
+    height: 40vw;
+}
 
 #toggle-menu {
     display: none;
