Style: alterando menu mobile

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -22,6 +22,7 @@
         <a href="./">Início</a>
         <a href="./estatuto.html">Estatuto</a>
         <a href="./manifesto.html">Manifesto</a>
+        <a href="./primeiros passos.html">Primeiros Passos</a>
     </div>
 
     <div>
