--- a/components/header/header.html
+++ b/components/header/header.html
@@ -11,7 +11,7 @@
         </li>
 
         <li>
-            <a class="botao-menu dropdown" href="#" about estatuto manifesto>Sobre Nós</a>
+            <a class="botao-menu dropdown" about estatuto manifesto>Sobre Nós</a>
             <ul class="sub-menu">
                 <li>
                     <a class="botao-menu" href="./estatuto.html" estatuto>Estatuto</a>
@@ -32,7 +32,7 @@
         </li>
 
         <li>
-            <a class="botao-menu" href="#" projetos andamento finalizado>Projetos</a>
+            <a class="botao-menu" projetos andamento finalizado>Projetos</a>
             <ul class="sub-menu">
                 <li>
                     <a class="botao-menu" href="./projetos em andamento.html" andamento>Andamento</a>
@@ -45,7 +45,7 @@
         </li>
 
         <li>
-            <a class="botao-menu" href="#" cadastro membros camaradas>Cadastro</a>
+            <a class="botao-menu" cadastro membros camaradas>Cadastro</a>
             <ul class="sub-menu">
                 <li>
                     <a class="botao-menu" href="./membros.html" membros>Membros</a>
@@ -70,7 +70,7 @@
         </li>
 
         <li>
-            <a class="botao-menu dropdown" href="#" about estatuto manifesto>Sobre Nós</a>
+            <a class="botao-menu dropdown" about estatuto manifesto>Sobre Nós</a>
             <ul class="sub-menu">
                 <li>
                     <a class="botao-menu" href="./estatuto.html" estatuto>Estatuto</a>
@@ -91,7 +91,7 @@
         </li>
 
         <li>
-            <a class="botao-menu" href="#" projetos andamento finalizado>Projetos</a>
+            <a class="botao-menu" projetos andamento finalizado>Projetos</a>
             <ul class="sub-menu">
                 <li>
                     <a class="botao-menu" href="./projetos em andamento.html" andamento>Andamento</a>
@@ -104,7 +104,7 @@
         </li>
 
         <li>
-            <a class="botao-menu" href="#" cadastro membros camaradas>Cadastro</a>
+            <a class="botao-menu" cadastro membros camaradas>Cadastro</a>
             <ul class="sub-menu">
                 <li>
                     <a class="botao-menu" href="./membros.html" membros>Membros</a>
@@ -115,5 +115,7 @@
                 </li>
             </ul>
         </li>
+
+        <a href="./"><img src="./assets/icons/footer_logo.png" alt=""></a>
     </div>
 </div>
