--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ h2 {
 }
 
 a {
+    cursor: pointer;
     text-decoration: none;
     color: var(--link-primary-color);
 }
@@ -185,31 +186,34 @@ a:hover {
 .menu-mobile {
     position: fixed;
     height: 100vh;
-    width: 100vw;
+    width: 110vw;
 
     z-index: 2;
-    background-color: #000000a9;
+    background-color: #00000067;
+    backdrop-filter: blur(5px);
     top: 0;
 }
 
 .header > :last-child {
     background-color: var(--bg-primary-color);
+    border: 0.2rem solid var(--link-hover-color);
 
     position: fixed;
     width: 25vw;
     height: 100vh;
-    border-radius: 2%;
+    border-radius: 1.6rem;
     padding: 5rem 3rem 0 3rem;
+    font-size: 1.5rem;
 
     text-align: right;
 
     top: 0;
-    right: 0;
+    right: -1.5vw;
     z-index: 3;
 }
 
 .header > :last-child > li {
-    margin: 0 0 2rem 0;
+    margin: 0 0 4rem 0;
 }
 
 .header > :last-child > li:hover ul {
@@ -221,6 +225,12 @@ a:hover {
     margin-top: 1rem;
     right: 0;
     margin-right: 5rem;
+}
+
+.header > :last-child > :last-child > img {
+    margin-top: 50vh;
+    height: 10rem;
+    width: 16rem;
 }
 
 .header {
@@ -374,6 +384,16 @@ article[class='content faq'] > hr {
 
     .header {
         flex-wrap: wrap;
+        position: fixed;
+        background-color: var(--bg-primary-color);
+        width: 100%;
+        z-index: 1;
+
+        box-shadow: 0 0.1rem 0.2rem var(--link-hover-color);
+    }
+
+    .page-title {
+        margin-top: 5rem;
     }
 
     .header > .menu {
@@ -386,6 +406,8 @@ article[class='content faq'] > hr {
 
     .footer {
         display: grid;
+        column-gap: 5vw;
+        font-size: 1.5rem;
 
         grid-template-areas:
             'logo-footer .'
@@ -393,8 +415,12 @@ article[class='content faq'] > hr {
             'logo-footer .';
     }
 
+    .footer > :nth-child(3) {
+        margin: 1.8rem 0;
+    }
+
     .footer > :not(:first-child) {
-        margin-bottom: 1rem;
+        row-gap: 1.7rem;
     }
 }
 /* End Mobile */
